--- a/Atividades/atividade-06/atividade-06.html
+++ b/Atividades/atividade-06/atividade-06.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style/style-03.css">
+    <link rel="stylesheet" href="style.css">
 
     <title>Atividade 06</title>
 </head>
