--- a/Atividades/atividade-10/index.html
+++ b/Atividades/atividade-10/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 
     <head>
-        <!-- <link rel="stylesheet" href="css/default.css">
+        <link rel="stylesheet" href="css/default.css">
         <script src="tools/indice.js"></script>
         <script>var current_class="exercicio1";</script>
         <script src="highlight/highlight.pack.js"></script>
@@ -13,7 +13,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Folha de Exercícios 1</title>
         <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="css/styles.css"> -->
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
     </head>
 
     <body>
